--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nodemon": "^3.1.0",
     "razorpay": "^2.9.2",
     "sequelize": "^6.37.2",
-    "sib-api-v3-sdk": "^8.5.0"
+    "sib-api-v3-sdk": "^8.5.0",
+    "uuid": "^9.0.1"
   }
 }
